--- a/DiabetesRecords.Maui/AppShell.xaml
+++ b/DiabetesRecords.Maui/AppShell.xaml
@@ -3,7 +3,7 @@
     x:Class="DiabetesRecords.Maui.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:DiabetesRecords.Maui"
+    xmlns:local="clr-namespace:DiabetesRecords"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
