--- a/DiabetesRecords.Maui/App.xaml
+++ b/DiabetesRecords.Maui/App.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:DiabetesRecords.Maui"
-             x:Class="DiabetesRecords.Maui.App">
+             xmlns:local="clr-namespace:DiabetesRecords"
+             x:Class="DiabetesRecords.App">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
