--- a/DiabetesRecords.Maui/Platforms/Windows/App.xaml
+++ b/DiabetesRecords.Maui/Platforms/Windows/App.xaml
@@ -1,8 +1,8 @@
 ﻿<maui:MauiWinUIApplication
-    x:Class="DiabetesRecords.Maui.WinUI.App"
+    x:Class="DiabetesRecords.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:DiabetesRecords.Maui.WinUI">
+    xmlns:local="using:DiabetesRecords">
 
 </maui:MauiWinUIApplication>
