Progressi. Eseguono tutti i programmi. MAIU da rifinire e testare
MAUI: InjectionsPage non parte e dà un misterioso errore Java

--- a/GlucoMan.Maui/FoodToHitTargetCarbsPage.xaml
+++ b/GlucoMan.Maui/FoodToHitTargetCarbsPage.xaml
@@ -7,63 +7,64 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="70"/>
-                <RowDefinition Height="30"/>
-                <RowDefinition Height="60"/>
-                <RowDefinition Height="50"/>
+                <RowDefinition Height="0"/>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="55"/>
+                <RowDefinition Height="55"/>
                 <RowDefinition Height="70"/>
                 <RowDefinition Height="70"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition Height="70"/>
-                <RowDefinition Height="30"/>
-                <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
+                <ColumnDefinition />
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Button Grid.Row="0" Grid.Column="1" x:Name="btnCalculateGrams" Text="Calc Food" 
                    IsEnabled="True" Margin="10,0,10,0" Clicked="btnCalculateGrams_Click" />
-
-            <Label Grid.Row="1" Grid.Column="0" Text="Target CHO [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Entry Grid.Row="2" Grid.Column="0" x:Name="TxtTargetCho" Text="" Unfocused="TxtTargetCho_Leave"
+           
+            <Label Grid.Row="2" Grid.Column="0" Text="Target CHO [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Entry Grid.Row="3" Grid.Column="0" x:Name="TxtTargetCho" Text="" Unfocused="TxtTargetCho_Leave"
                    Keyboard="Numeric" Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    BackgroundColor="PaleGoldenrod" />
-            <Button Grid.Row="4" Grid.Column="0" x:Name="btnReadTarget" Text="Read target CHO" 
-                   Margin="10,5,10,5" Clicked="btnReadTargetCho_Click" />
 
-            <Label Grid.Row="1" Grid.Column="1" Text="CHO already taken [g]" 
-                   HorizontalTextAlignment="Center" VerticalTextAlignment="End" />
-            <Entry Grid.Row="2" Grid.Column="1" x:Name="TxtChoAlreadyTaken" Text="" Unfocused="TxtChoAlreadyTaken_Leave"
+
+            <Label Grid.Row="2" Grid.Column="1" Text="CHO already taken [g]" 
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="End" />            
+            <Entry Grid.Row="3" Grid.Column="1" x:Name="TxtChoAlreadyTaken" Text="" Unfocused="TxtChoAlreadyTaken_Leave"
                    Keyboard="Numeric" Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="PaleGreen" />
-            <Button Grid.Row="4" Grid.Column="1" x:Name="btnReadChoTaken" Text="Read CHO taken" 
-                   IsEnabled="True" Margin="10,5,10,5" Clicked="btnReadChoTaken_Click" />
 
-            <Label Grid.Row="1" Grid.Column="2" Text="CHO food to eat [%]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Entry Grid.Row="2" Grid.Column="2" x:Name="TxtChoOfFood" Text="" Unfocused="TxtChoOfFood_Leave"
+            <Label Grid.Row="2" Grid.Column="2" Text="CHO food to eat [%]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Entry Grid.Row="3" Grid.Column="2" x:Name="TxtChoOfFood" Text="" Unfocused="TxtChoOfFood_Leave"
                    Keyboard="Numeric" Margin="25,0,25,0" Placeholder="%" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="PaleGreen" />
-
-            <Button Grid.Row="4" Grid.Column="2" x:Name="btnReadFood" Text="Read Food CHO" 
-                   IsEnabled="True" Margin="10,5,10,5" Clicked="btnReadFood_Click" />
-
-            <Entry Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" x:Name="TxtFoodName" Text="" Unfocused="TxtChoOfFood_Leave"
+            
+            <Entry Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" x:Name="TxtFoodName" Text="" Unfocused="TxtChoOfFood_Leave"
                    Keyboard="Numeric" Margin="25,0,25,0" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="White" />
 
-            <Button Grid.Row="5" Grid.Column="1" x:Name="btnReadAll" Text="Read All" 
+            <Button Grid.Row="5" Grid.Column="0" x:Name="btnReadTarget" Text="Read target CHO" 
+                   Margin="10,5,10,5" Clicked="btnReadTargetCho_Click" />
+            <Button Grid.Row="5" Grid.Column="1" x:Name="btnReadChoTaken" Text="Read CHO taken" 
+                   IsEnabled="True" Margin="10,5,10,5" Clicked="btnReadChoTaken_Click" />
+            <Button Grid.Row="5" Grid.Column="2" x:Name="btnReadFood" Text="Read Food CHO" 
+                   IsEnabled="True" Margin="10,5,10,5" Clicked="btnReadFood_Click" />
+            
+            <Button Grid.Row="6" Grid.Column="1" x:Name="btnReadAll" Text="Read All" 
                    Margin="10,0,10,0" Clicked="btnReadAll_Click" />
 
-            <Label Grid.Row="6" Grid.Column="0" Text="CHO left to take [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Entry Grid.Row="7" Grid.Column="0" x:Name="TxtChoLeftToTake" Text="" Unfocused="TxtChoOfFood_Leave"
+            <Label Grid.Row="7" Grid.Column="0" Text="CHO left to take [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Entry Grid.Row="8" Grid.Column="0" x:Name="TxtChoLeftToTake" Text="" Unfocused="TxtChoOfFood_Leave"
                    Keyboard="Numeric" Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="White" />
 
-            <Button Grid.Row="7" Grid.Column="1"  Text="Injection" IsEnabled="True" 
+            <Button Grid.Row="8" Grid.Column="1"  Text="Injection" IsEnabled="True" 
                         x:Name="btnInjection" Clicked="btnInjection_Click" />
 
-            <Label Grid.Row="6" Grid.Column="2" Text="Food to eat to hit target CHO [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Entry Grid.Row="7" Grid.Column="2" x:Name="TxtFoodToHitTarget" Text="" 
+            <Label Grid.Row="7" Grid.Column="2" Text="Food to eat to hit target CHO [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Entry Grid.Row="8" Grid.Column="2" x:Name="TxtFoodToHitTarget" Text="" 
                    Keyboard="Numeric" Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="SkyBlue" />
         </Grid>
