--- a/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
+++ b/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Maui.GlucoseMeasurementsPage"
-             Title="GlucoseMeasurementsPage">
+             Title="Glucose Measurements">
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
@@ -27,9 +27,9 @@
                    Keyboard="Numeric" HorizontalTextAlignment="End" BackgroundColor="Lime" IsEnabled="true"/>
 
             <DatePicker Grid.Row="1" Grid.Column="1" x:Name="dtpEventDate" BackgroundColor="PaleGreen"
-                        FontSize="Small" Format="yyyy-MM-dd" HorizontalOptions="Center"/>
+                        Format="yyyy-MM-dd" HorizontalOptions="Center"/>
             <TimePicker Grid.Row="1" Grid.Column="2" x:Name="dtpEventTime" BackgroundColor="PaleGreen"
-                        FontSize="Small" Format="HH:mm:ss" HorizontalOptions="Center"/>
+                        Format="HH:mm:ss" HorizontalOptions="Center"/>
             <Label Grid.Row="1" Grid.Column="3" x:Name="txtIdGlucoseRecord" Text="" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
             <!-- check box with associated label into a StackLayout -->
 
@@ -73,8 +73,8 @@
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="18"/>
                                     </Grid.RowDefinitions>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="0" Text="{Binding Timestamp}"/>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding GlucoseValue}"/>
+                                    <Label HorizontalTextAlignment="Start" Grid.Column="0" Text="{Binding Timestamp}"/>
+                                    <Label HorizontalTextAlignment="End" Grid.Column="1" Text="{Binding GlucoseValue}"/>
                                 </Grid>
                             </ViewCell.View>
                         </ViewCell>
