--- a/GlucoMan.Maui/MainPage.xaml
+++ b/GlucoMan.Maui/MainPage.xaml
@@ -2,36 +2,41 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Maui.MainPage">
-    <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="0" CornerRadius="0" Margin="0,0,0,0">
-            <Label x:Name="lblAppName" Text="GlucoMan " HorizontalTextAlignment="Center" 
-                   TextColor="White" FontSize="30"/>
-        </Frame>
-        <Button x:Name="btnGlucoseMeasurement" Text="Glucose" Clicked="btnGlucoseMeasurement_Clicked"
-                Margin="15,0,15,0"></Button>
-        <Button x:Name="btnMeals" Text="Meals" Clicked="btnMeals_Clicked" IsEnabled="True"
-                Margin="15,0,15,0"></Button>
-        <Button x:Name="btnNewMeal" Text="New meal" Clicked="btnNewMeal_Clicked" IsEnabled="True"
-                Margin="15,0,15,0"></Button>
-        <Button x:Name="btnFoods" Text="Foods" Clicked="btnFoods_Clicked" IsEnabled="True"
-                Margin="15,0,15,0"></Button>
-        <Button x:Name="btnWeighFood" Text="Weigh Food" Clicked="btnWeighFood_Clicked" IsEnabled="False"
-                Margin="15,0,15,0"></Button>
-        <Button x:Name="btnInsulinCalc" Text="Meal insulin" Clicked="btnInsulinCalc_Clicked"
-                Margin="15,0,15,0"></Button>
-        <Button x:Name="btnInjections" Text="Injections" 
-                Clicked="btnInjections_Clicked" IsEnabled="True" Margin="15,0,15,0"></Button>
-        <Button x:Name="btnFoodToHitTargetCarbs" Text="Food to reach target carbs" 
-                Clicked="btnFoodToHitTargetCarbs_Clicked"
-                Margin="15,0,15,0"></Button>
-        <Button x:Name="btnHypoPrediction" Text="Hypoglicemia time prediction" Clicked="btnHypoPrediction_Clicked"
-                Margin="15,0,15,0"></Button>
-        <Button x:Name="btnAlarms" Text="Alarm" IsEnabled="False" Clicked="btnAlarms_Clicked" 
-                Margin="15,0,15,0"></Button>
-        <Button x:Name="btnMiscellaneousFunctions" Text="Miscellaneous functions" 
-                Clicked="btnMiscellaneousFunctions_Clicked"
-                Margin="15,0,15,0"></Button>
-        <Button x:Name="btnAbout" Text="About" Clicked="btnAbout_Clicked"
-                Margin="15,0,15,0"></Button>
-    </StackLayout>
+    <Grid x:Name="grdOuter">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <StackLayout Grid.Column="0">
+            <Frame  x:Name="mainStack" BackgroundColor="#2196F3" Padding="0" CornerRadius="0" Margin="0,0,0,0">
+                <Label x:Name="lblAppName" Text="GlucoMan " HorizontalTextAlignment="Center" 
+                       TextColor="White" FontSize="30"/>
+            </Frame>
+            <Button x:Name="btnGlucoseMeasurement" Text="Glucose" Clicked="btnGlucoseMeasurement_Clicked"
+                    Margin="15,0,15,0"></Button>
+            <Button x:Name="btnMeals" Text="Meals" Clicked="btnMeals_Clicked" IsEnabled="True"
+                    Margin="15,0,15,0"></Button>
+            <Button x:Name="btnNewMeal" Text="New meal" Clicked="btnNewMeal_Clicked" IsEnabled="True"
+                    Margin="15,0,15,0"></Button>
+            <Button x:Name="btnFoods" Text="Foods" Clicked="btnFoods_Clicked" IsEnabled="True"
+                    Margin="15,0,15,0"></Button>
+            <Button x:Name="btnWeighFood" Text="Weigh Food" Clicked="btnWeighFood_Clicked" IsEnabled="False"
+                    Margin="15,0,15,0"></Button>
+            <Button x:Name="btnInsulinCalc" Text="Meal insulin" Clicked="btnInsulinCalc_Clicked"
+                    Margin="15,0,15,0"></Button>
+            <Button x:Name="btnInjections" Text="Injections" 
+                    Clicked="btnInjections_Clicked" IsEnabled="True" Margin="15,0,15,0"></Button>
+            <Button x:Name="btnFoodToHitTargetCarbs" Text="Food to reach target carbs" 
+                    Clicked="btnFoodToHitTargetCarbs_Clicked"
+                    Margin="15,0,15,0"></Button>
+            <Button x:Name="btnHypoPrediction" Text="Hypoglicemia time prediction" Clicked="btnHypoPrediction_Clicked"
+                    Margin="15,0,15,0"></Button>
+            <Button x:Name="btnAlarms" Text="Alarm" IsEnabled="False" Clicked="btnAlarms_Clicked" 
+                    Margin="15,0,15,0"></Button>
+            <Button x:Name="btnMiscellaneousFunctions" Text="Miscellaneous functions" 
+                    Clicked="btnMiscellaneousFunctions_Clicked"
+                    Margin="15,0,15,0"></Button>
+            <Button x:Name="btnAbout" Text="About" Clicked="btnAbout_Clicked"
+                    Margin="15,0,15,0"></Button>
+        </StackLayout>
+    </Grid>
 </ContentPage>
